123/MyProject/src/objects/Supplier__c.object
<CustomObject>
    <fields>
        <fullName>Contact_No1__c</fullName>
        <label>Contact No1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_No2__c</fullName>
        <label>Contact No2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplier_Address__c</fullName>
        <label>Supplier Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_Email__c</fullName>
        <label>Supplier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <label>Supplier ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>